hphp/hack/test/typecheck/variadic_args4.php.exp
File "variadic_args4.php", line 8, characters 19-22:
The method `meth` is not compatible with the overridden method (Typing[4341])
  File "variadic_args4.php", line 8, characters 19-22:
  Method `meth` has type `(function(mixed $x = _): void)` in `C2`
  File "variadic_args4.php", line 4, characters 19-22:
  But is has type `(function(mixed $args...): void)` in parent `C1`
  File "variadic_args4.php", line 8, characters 19-22:
  Type `(function(mixed $x = _): void)` is not a subtype of `(function(mixed $args...): void)`
  File "variadic_args4.php", line 8, characters 19-22:
  Should have a variadic argument
  File "variadic_args4.php", line 4, characters 19-22:
  Because of this definition
